Addition of gems (Pry etc), removal of RSpec gem, addition of Rack Deflater (HTTP response compression)

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -39,5 +39,6 @@ en:
   #donate_href: "donate"
   get_started: "Get started"
   learn_more: "Learn more"
+  project_quickstart: "Start your project"
   project_picks: "Some great projects"
   more_about: "More about 4just1"
