small bugfix: project block layout under OSX/Safari (bug report Richard 12 april 2015)

--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -99,7 +99,7 @@ nl:
       submit: Zoek
   project_block:
     stats:
-      target: doelbedrag
+      target: doel
       funded: opgehaald
       days_left: dagen over
   activerecord:
